--- a/src/views/weatherWidget.hbs
+++ b/src/views/weatherWidget.hbs
@@ -1,7 +1,14 @@
-<section class="today">
+<section class="weather">
     <div class="today-weather">
         <p class="today-weather-city block">El tiempo en Castellón de la Plana<span>{{city}}</span></p>
-        <p class="time bold block">21:23 Lluvia Debil</p>
+        <div class="today-weahter-time">
+                 <p class="time bold500">21:23 Lluvia Debil</p>
+                 <span class="icons">
+                 <i class="icon-heart"></i>
+                 <i class="icon-share"></i>
+                 </span>
+        </div>
+
         {{!-- <p>{{horaActual}}:{{minutosActualTwoDigits}} {{estadoHoraActual}}</p> --}}
         {{!-- <img src="icons/tiempo/{{indexIconoHoraActual}}.svg" alt="" class="todayWeather"> --}}
         <div class="container-today">
@@ -12,10 +19,19 @@
         </div>
 
         <div class="today-weather-container-precipitaciones">
+            <div class="flexWrap bottom05">
             <img class="paraguas" src="icons/lluvia/paraguas.png" alt="">
             <div class="porcentaje-container">
                 <p class="porcentaje block">Cantidad</p>
                 <p class="cantidad block">{{rainCantidad}}0.1 mm</p>
+            </div>
+            </div>
+            <div class="flexWrap">
+            <img class="paraguas" src="icons/luna/5.png" alt="">
+            <div class="porcentaje-container">
+                <p class="porcentaje block">Luna Menguante</p>
+                <p class="cantidad block">{{rainCantidad}}Iluminada: 3.52%</p>
+            </div>
             </div>
         </div>
             <div class="durante-container">
@@ -26,10 +42,91 @@
                 </div>
             </div>
             <div class="next">
-                <button>></button>
+                <button class="btnNext"><i class="icon-arrowR"></i></button>
             </div>
         </div>
         </div>
-        </div>
+
+<aticle class="week-weather">
+      <div class="week-today">
+        <p class="bold700">HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <img class="week-weather-paraguas" src="icons/lluvia/paraguas.png" alt="">
+        <p>20mm</p>
+        <p class="week-today-rangoTemperatura bold">16º / 12º</p>
+        <img src="icons/viento/58.png" alt="" class="weekWindIcon">
+        <p>25-49</p>
+        <p>km/h</p>
     </div>
+      <div class="week-days">
+        <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/viento/58.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+      <div class="week-days">
+        <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+      <div class="week-days">
+  <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+      <div class="week-days">
+        <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+      <div class="week-days">
+  <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+      <div class="week-days">
+  <p>HOY</p>
+        <p>17 Mar</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>90%</p>
+        <p>20mm</p>
+        <p>16º / 12º</p>
+        <img src="icons/tiempo/15.svg" alt="" class="weekWeatherIcon">
+        <p>25-49</p>
+        <p>km/h</p>
+    </div>
+
+
+</article>
 </section>
+
