--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -1,28 +1,71 @@
-<section class="today">
+<section class="weather">
     <div class="today-weather">
-        <p class="city">El tiempo en <span>{{city}}</span></p>
-        <p>{{horaActual}}:{{minutosActualTwoDigits}} {{estadoHoraActual}}</p>
-        <img src="icons/tiempo/{{indexIconoHoraActual}}.svg" alt="" class="todayWeather">
+        <p class="today-weather-city block">El Tiempo en <span>{{weatherToday.city}}</span></p>
+        <div class="today-weahter-time">
+                 <p class="time bold500">{{weatherToday.horaActual}}:{{weatherToday.minutosActualTwoDigits}} {{weatherToday.estadoHoraActual}}</p>
+                 <span class="icons">
+                 <i class="icon-heart"></i>
+                 <i class="icon-share"></i>
+                 </span>
+        </div>
+
+
+        {{!-- <img src="icons/tiempo/{{indexIconoHoraActual}}.svg" alt="" class="todayWeather"> --}}
+        <div class="container-today">
+        <img src="icons/tiempo/{{weatherToday.indexIconoHoraActual}}.svg" alt="" class="todayWeatherIcon">
         <div class="today-weather-container-temperatura">
-            <p class="today-weather-temperatura">{{temperaturaActual}}o</p>
-            <p class="today-weather-sensacionTermica">Sensación de {{sensacionTermica}}o</p>
+            <p class="today-weather-temperatura block">{{weatherToday.temperaturaActual}}<sup class="supBig">o</sup></p>
+            <p class="today-weather-sensacionTermica">Sensación de <span class="bold700">{{weatherToday.sensacionTermica}}</span><sup class="supSmall bold">o</sup></span></p>
         </div>
 
         <div class="today-weather-container-precipitaciones">
-            <img src="" alt="">
+            <div class="flexWrap bottom05">
+            <img class="paraguas" src="icons/lluvia/paraguas.png" alt="">
             <div class="porcentaje-container">
-                <p class="porcentaje">Precipitaciones</p>
-                <p class="cantidad">{{rainCantidad}} mm</p>
+                <p class="porcentaje block">Cantidad</p>
+                <p class="cantidad block">{{weatherToday.rainCantidad}} mm</p>
             </div>
+            </div>
+            <div class="flexWrap">
+            <img class="luna" src="icons/luna/{{weatherToday.iconoLuna}}.png" alt="">
+            <div class="porcentaje-container">
+                <p class="porcentaje block">{{weatherToday.tipoLuna}}</p>
+                <p class="cantidad block">{{weatherToday.descripcionLuna}}</p>
+            </div>
+            </div>
+        </div>
             <div class="durante-container">
-                <button class="detalle">i</button>
-                <p class="durante">La mayor parte del día</p>
-                <p class="durante">{{estadoMayorParteDelDia}}</p>
+                <button class="btnDetalle">i</button>
+                <div class="durante-container-mayorParte">
+                    <p class="durante block bold subrayado">La mayor parte del día</p>
+                    <p class="duranteblock ">{{weatherToday.estadoMayorParteDelDia}}</p>
+                </div>
             </div>
             <div class="next">
-                <button>></button>
+                <button class="btnNext"><i class="icon-arrowR"></i></button>
             </div>
         </div>
         </div>
+
+<aticle class="week-weather">
+    {{#each weatherWeek}}
+      <div>
+        <p class="bold700">{{nombreDia}}</p>
+        <p>{{diaAndMes}}</p>
+        <img src="icons/tiempo/{{tiempoIcono}}.svg" alt="" class="weekWeatherIcon">
+        <img class="week-weather-paraguas" src="icons/lluvia/paraguas.png" alt="">
+        <p> {{#if lluvia}}
+                {{lluvia}} mm
+            {{else}} -
+            {{/if}}
+        </p>
+
+        <p class="week-today-rangoTemperatura bold">{{temperaturaMaxima}}° / {{temperaturaMinima}}°</p>
+        <img src="icons/viento/{{vientoIcono}}.png" alt="" class="weekWindIcon">
+        <p>{{vientoKmh}}-{{vientoRachas}}</p>
+        <p>km/h</p>
     </div>
+     {{/each}}
+</article>
 </section>
+
