--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Tiempo</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/fontIcons.css">
+    <link rel="stylesheet" href="css/weatherAppIcons.css">
 
 </head>
 <body>
