--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -4,8 +4,20 @@
         <div class="today-weahter-time">
                  <p class="time bold500">{{weatherToday.horaActual}}:{{weatherToday.minutosActualTwoDigits}} {{weatherToday.estadoHoraActual}}</p>
                  <span class="icons">
-                 <i class="icon-heart"></i>
-                 <i class="icon-share"></i>
+                 <i id="heart" class="icon-heart-unselected"></i>
+                 <i id="share" class="icon-share">
+                    <div class="socialIcons">
+                        <i id="facebook" class="icon-social-facebook"></i>
+                        <i id="twitter" class="icon-social-twitter"></i>
+                        <i id="linkedin" class="icon-social-linkedin"></i>
+                        <i id="pinterest" class="icon-social-pinterest"></i>
+                        <i id="mail" class="icon-social-mail"></i>
+                        <i id="tumblr" class="icon-social-tumblr"></i>
+                        <i id="xing" class="icon-social-xing"></i>
+                        <i id="print" class="icon-social-print"></i>
+                    </div>
+                 </i>
+
                  </span>
         </div>
 
@@ -42,7 +54,7 @@
                 </div>
             </div>
             <div class="next">
-                <button class="btnNext"><i class="icon-arrowR"></i></button>
+                <button class="btnNext"><i class="icon-arrow-right"></i></button>
             </div>
         </div>
         </div>
