--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,6 @@
-<header>
+{{!-- <header>
     <h1>El Tiempo</h1>
-</header>
+</header> --}}
 <div class="selection">
 <select name="continentes" id="continentes">
     <option id="optionTitle">Elige Continente</option>
