ADD Datos provided and SET variables

--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -57,6 +57,7 @@
                 <button class="btnNext"><i class="icon-arrow-right"></i></button>
             </div>
         </div>
+        <i class="copy">*Datos obtenidos de tiempo.com</i>
         </div>
 
 <aticle class="week-weather">
