--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -6,6 +6,10 @@
    font-family: 'Montserrat', 'sans-serif';
 }
 
+.copy {
+    margin-left: auto;
+    font-size: 0.6rem;
+}
 body {
     height: 100vh;
     width: 1024px;
