Add local time of the city. *Now showing local time of city.

--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -2,7 +2,7 @@
     <div class="today-weather">
         <p class="today-weather-city block">El Tiempo en <span>{{weatherToday.city}}</span></p>
         <div class="today-weahter-time">
-                 <p class="time bold500">{{weatherToday.horaActual}}:{{weatherToday.minutosActualTwoDigits}} {{weatherToday.estadoHoraActual}}</p>
+                 <p class="time bold500">{{weatherToday.hora}}:{{weatherToday.minutos}} {{weatherToday.estadoActual}}</p>
                  <span class="icons">
                  <i id="heart" class="icon-heart-unselected"></i>
                  <i id="share" class="icon-share">
