--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -60,9 +60,9 @@
         <i class="copy">*Datos obtenidos de tiempo.com</i>
         </div>
 
-<aticle class="week-weather">
+<aticle id="week-weather" class="week-weather">
     {{#each weatherWeek}}
-      <div>
+      <div id={{@key}} {{#if selected}} class="selected" {{/if}}>
         <p class="bold700">{{nombreDia}}</p>
         <p>{{diaAndMes}}</p>
         <img src="icons/tiempo/{{tiempoIcono}}.svg" alt="" class="weekWeatherIcon">
