--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -26,5 +26,6 @@
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.runtime.js"></script>
 <script src="js/weatherWidget.precompiled.js"></script>
 <script src="js/ciudadesSelect.precompiled.js"></script>
+<script src="js/daySelected.precompiled.js"></script>
 <script src="js/index.js"></script>
 
