Add Show hours of Selected Day * Show left hours of selected if is today * Show all hours of selected rest of days * Fix error on API. get timezone hour for Europe Summertime

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -327,6 +327,10 @@ li:hover {
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
 }
+
+.week-weather div:nth-child(6), .week-weather div:nth-child(7) {
+    cursor: auto;
+}
 .week-weather div:first-child {
     flex: 1;
     text-align: center;
@@ -361,9 +365,8 @@ li:hover {
     transform-origin: 0 0;
 }
 
-.week-weather div:not(.selected):hover {
+.week-weather div:not(.selected):not(:nth-child(6)):not(:nth-child(7)):hover {
     background-color: rgb(17, 17, 212)
-
 }
 
 .bottom05 {
