--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -117,6 +117,7 @@ li:hover {
 }
 .today-weather {
     display: grid;
+    height: 15em;
     background-color: cornsilk;
     padding: 1em 3em 0em 3em;
     z-index: 0;
@@ -316,6 +317,12 @@ li:hover {
 .next .icon-arrow-right {
     font-size: 1.5rem;
     color: black;
+}
+
+.graficas {
+    position: relative;
+    width: 100%;
+    height: 15em;
 }
 
 .week-weather {
