--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,6 +23,7 @@
     <input type="text" name="ciudadInput" id="ciudadInput" placeholder="Buscar directamente por ciudad">
     <div class="resultadoCiudades" id="resultadoCiudades"></div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.runtime.js"></script>
 <script src="js/weatherWidget.precompiled.js"></script>
 <script src="js/ciudadesSelect.precompiled.js"></script>
