Fix issue with hover with ChartJS * Delete and create again the canvas manually fixed the issue Using Destroy() and Clear() didn't work.

--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -64,7 +64,7 @@
         <i class="copy">*Datos obtenidos de tiempo.com</i>
     </div>
 
-    <article class="graficas">
+    <article id="graficas" class="graficas">
         <canvas id="grafica"></canvas>
     </article>
 
